set up package.json for publishing a package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollup-component-library",
+  "name": "@fox-foxivich/rollup-test-component-library",
   "version": "0.0.1",
   "description": "React component library",
   "scripts": {
@@ -30,5 +30,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/fox-foxivich"
+  }
 }
