--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fox-foxivich/rollup-test-component-library",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "React component library",
   "scripts": {
     "rollup": "rollup --config rollup.config.js --bundleConfigAsCjs"
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "rollup": "^3.11.0",
     "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4"
   },
