--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.4",
   "description": "React component library",
   "scripts": {
-    "rollup": "rollup --config rollup.config.js --bundleConfigAsCjs"
+    "rollup": "rollup --config rollup.config.js --bundleConfigAsCjs",
+    "test": "jest"
   },
   "keywords": [
     "react",
@@ -14,11 +15,22 @@
   "author": "Vladislav Balabkin <vladislav.foxivich@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "babel-jest": "^29.4.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "react": "^18.2.0",
     "rollup": "^3.11.0",
     "rollup-plugin-dts": "^5.1.1",
